--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,4 @@
 JWT_SCERT=/qY!*D'gw'fAemdc`Vm$23tx=uS(F7?e]C[$RP#%CtL~':aH4!
+CLOUDINARY_NAME=gladsonms
+CLOUDINARY_API_KEY=662368936311596
+CLOUDINARY_API_SECERET=9m9ueumWP77Fc06kDeaIi8bM9W0
